compiler/lume_parse/src/snapshots/lume_parse__tests__operator_snapshots@not_equal.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"a != b;\")"
---
SOURCE_FILE@0..7
  EXPR_STMT@0..7
    BIN_EXPR@0..6
      VARIABLE_EXPR@0..1
        NAME@0..1
          IDENT@0..1 "a"
      WHITESPACE@1..2 " "
      NEQUAL@2..4 "!="
      WHITESPACE@4..5 " "
      VARIABLE_EXPR@5..6
        NAME@5..6
          IDENT@5..6 "b"
    SEMICOLON@6..7 ";"
