compiler/lume_parse/src/snapshots/lume_parse__tests__range_snapshots@expr_nested_exclusive.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = ((a + b)..(a + b + 1));\")"
---
SOURCE_FILE@0..31
  LET_STMT@0..31
    LET_KW@0..3 "let"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "_"
    WHITESPACE@5..6 " "
    ASSIGN@6..7 "="
    WHITESPACE@7..8 " "
    PAREN_EXPR@8..30
      LEFT_PAREN@8..9 "("
      RANGE_EXPR@9..29
        PAREN_EXPR@9..16
          LEFT_PAREN@9..10 "("
          BIN_EXPR@10..15
            VARIABLE_EXPR@10..11
              NAME@10..11
                IDENT@10..11 "a"
            WHITESPACE@11..12 " "
            ADD@12..13 "+"
            WHITESPACE@13..14 " "
            VARIABLE_EXPR@14..15
              NAME@14..15
                IDENT@14..15 "b"
          RIGHT_PAREN@15..16 ")"
        DOT_DOT@16..18 ".."
        PAREN_EXPR@18..29
          LEFT_PAREN@18..19 "("
          BIN_EXPR@19..28
            BIN_EXPR@19..24
              VARIABLE_EXPR@19..20
                NAME@19..20
                  IDENT@19..20 "a"
              WHITESPACE@20..21 " "
              ADD@21..22 "+"
              WHITESPACE@22..23 " "
              VARIABLE_EXPR@23..24
                NAME@23..24
                  IDENT@23..24 "b"
            WHITESPACE@24..25 " "
            ADD@25..26 "+"
            WHITESPACE@26..27 " "
            LIT_EXPR@27..28
              LITERAL@27..28
                INTEGER_LIT@27..28 "1"
          RIGHT_PAREN@28..29 ")"
      RIGHT_PAREN@29..30 ")"
    SEMICOLON@30..31 ";"
