compiler/lume_parse/src/snapshots/lume_parse__tests__range_snapshots@expr_nested_inclusive.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = ((a + b)..=(a + b + 1));\")"
---
SOURCE_FILE@0..32
  LET_STMT@0..32
    LET_KW@0..3 "let"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "_"
    WHITESPACE@5..6 " "
    ASSIGN@6..7 "="
    WHITESPACE@7..8 " "
    PAREN_EXPR@8..31
      LEFT_PAREN@8..9 "("
      RANGE_EXPR@9..30
        PAREN_EXPR@9..16
          LEFT_PAREN@9..10 "("
          BIN_EXPR@10..15
            VARIABLE_EXPR@10..11
              IDENT@10..11 "a"
            WHITESPACE@11..12 " "
            ADD@12..13 "+"
            WHITESPACE@13..14 " "
            VARIABLE_EXPR@14..15
              IDENT@14..15 "b"
          RIGHT_PAREN@15..16 ")"
        DOT_DOT@16..18 ".."
        ASSIGN@18..19 "="
        PAREN_EXPR@19..30
          LEFT_PAREN@19..20 "("
          BIN_EXPR@20..29
            BIN_EXPR@20..25
              VARIABLE_EXPR@20..21
                IDENT@20..21 "a"
              WHITESPACE@21..22 " "
              ADD@22..23 "+"
              WHITESPACE@23..24 " "
              VARIABLE_EXPR@24..25
                IDENT@24..25 "b"
            WHITESPACE@25..26 " "
            ADD@26..27 "+"
            WHITESPACE@27..28 " "
            LIT_EXPR@28..29
              LITERAL@28..29
                INTEGER_LIT@28..29 "1"
          RIGHT_PAREN@29..30 ")"
      RIGHT_PAREN@30..31 ")"
    SEMICOLON@31..32 ";"
