compiler/lume_parse/src/snapshots/lume_parse__tests__range_snapshots@literal_inclusive.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = (0..=1);\")"
---
SOURCE_FILE@0..13
  LET_STMT@0..13
    LET_KW@0..3 "let"
    NAME@3..4
      IDENT@3..4 "_"
    ASSIGN@4..5 "="
    PAREN_EXPR@5..12
      LEFT_PAREN@5..6 "("
      RANGE_EXPR@6..11
        LITERAL@6..7
          INTEGER_LIT@6..7 "0"
        DOT_DOT@7..9 ".."
        ASSIGN@9..10 "="
        LITERAL@10..11
          INTEGER_LIT@10..11 "1"
      RIGHT_PAREN@11..12 ")"
    SEMICOLON@12..13 ";"
