compiler/lume_parse/src/snapshots/lume_parse__tests__return_snapshots@call.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"return a.b(c);\")"
---
SOURCE_FILE@0..13
  RETURN_STMT@0..13
    RETURN_KW@0..6 "return"
    INSTANCE_CALL_EXPR@6..12
      IDENT@6..7 "a"
      DOT@7..8 "."
      NAME@8..9
        IDENT@8..9 "b"
      ARG_LIST@9..12
        LEFT_PAREN@9..10 "("
        VARIABLE_EXPR@10..11
          IDENT@10..11 "c"
        RIGHT_PAREN@11..12 ")"
    SEMICOLON@12..13 ";"
